tests/paczka1/fuzzy1/41859264.err
Error in line 6: dHKtxZ S714 0,6
Error in line 11: dHKtxZ S245 -6,4
Error in line 3: 5tCRXEfO9j A403 54,8
Error in line 17: WC7 A403 72,86
Error in line 8: dHKtxZ S245 93,5
Error in line 18: WC7 A403 116,9
Error in line 9: 4YX S286 91,2
Error in line 24: WC7 S286 59,5
